# sightline

./: LICENSE  README.md  pyproject.toml
src/sightline/: README.md  characteristics.py  domains.py  generators.py  graders.py  models.py
tests/unit/: characteristics_tests.py  domains_tests.py  generators_tests.py  graders_tests.py  models_tests.py
